# rustyukino

./: Cargo.toml
src/: main.rs  user_manager.rs
src/message_handler/: mod.rs  registered.rs  unregistered.rs
src/subs_pls/: db.rs  mod.rs  notify.rs  page_parser.rs  release_parser.rs  update_shows.rs
web/: index.html
yukino-frontend/: .eslintrc.js  README.md  package-lock.json  package.json  quasar.config.js
yukino-frontend/src/boot/: axios.ts
yukino-frontend/src/css/: quasar.variables.scss
yukino-frontend/src/layouts/: MainLayout.vue
yukino-frontend/src/pages/: IndexPage.vue
yukino-frontend/src/stores/: Api.ts
