[package]
name = "yukino"
version = "0.1.0"
authors = ["CallMeMSL <david-schwab@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
serenity = "0.10"
tokio-postgres = "0.7"
tokio_schedule = "0.3.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1.5"
lazy_static = "1.4"
roxmltree = "0.14"
chrono = "0.4"
reqwest = "0.11"
easy-scraper = "0.2.0"
html-escape = "0.2"